# rest

./: .envrc  .gitignore  README.md  env.sh  pyproject.toml
.githooks/: pre-commit.sh  symblic.sh
.github/workflows/: pytest.yaml
app/: config.py  models.py  sample.models.py  serializer.py  session.py  signals.py  test_models.py  test_serializer.py  test_serializer_hypthesis.py  test_serializer_pytest.py  utils.py  views.py
app/migrations/: 0001.sql  0001_initial.py  0002.sql  0002_alter_apikeys_key.py  0002_alter_data_structure_alter_structure_space.py  0002_delete_comment_delete_post.py  0002_post_comment.py  0003_alter_data__published_at.py  0003_remove_user_associate_associate_user.py  0003_rename_created_at_data__created_at_and_more.py  0004_alter_data__published_at.py  0004_rename_key_apikeys_api_key_remove_apikeys_space_and_more.py  0005_data__model.py  0005_fieldmodel.py  0005_remove_organization_user_membership.py  0006_alter_membership_organization_alter_membership_user.py
app/migrations/sql/: 0001.sql  0002.sql
app/signals/: data_model.py  publishment_state_model.py
app/signals/DataModel/: published_at.py
app/signals/PublishmentStateModel/: log_if_published.py
app/tests/: README.md  test_models.py
app/tests/User/: __init__.py
app/tests/auth/: __init__.py
app/tests/basic/: __init__.py
app/tests/organization/: __init__.py
app/tests/user/: __init__.py
core/: settings.py  urls.py
core/tests/: test_urls.py
env/: __init__.py  cicd.py  gcloud.py  github_workflows.py
